--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Michael Fragiskatos - Portfolio Website</title>
+    <title>Michael Fragiskatos - Portfolio</title>
     <link rel="shortcut icon" href= "img/favicon-32x32.png" />
     <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
