Change Profile Photo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <section class="profile">
-      <img src="img/me.png" alt="Michael Fragiskatos Portrait" class="profile__portrait">
+      <img src="img/michael_f.jpg" alt="Michael Fragiskatos Portrait" class="profile__portrait">
         <h1>Hello World!</h1>
           <p>My name is Michael Fragiskatos. I am a <span>web</span> developer from Canada.</p>
             <a href="#" class="button">Check out some of my code</a>
