--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
     <section class="contact">
       <h1>Contact Information</h1>
-          Telephone:<a href= tel:12269293570">1-226-929-3570</a> <br>
+          Telephone:<a href= "tel:12269293570">1-226-929-3570</a> <br>
           Skype:<a href="skype:mfragiskatos"> mfragiskatos</a> <br>
           Email:<a href="mailto:michael.fragiskatos@gmail.com">michael.fragiskatos@gmail.com</a><br>
           <br>
@@ -46,7 +46,7 @@
           <label class="standard-label" for="contact-email">Email: </label>
           <input type="email" id="contact-email" required>
           <label class="standard-label" for="contact-tel">Telephone: </label>
-          <input type="tel" id="contact-tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
+          <input type="tel" required id="contact-tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
           <label class="standard-label" for="contact-message">Message: </label>
           <textarea required maxlength="240" id="contact-message"></textarea>
           <br>
