--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
   <body>
     <header class="page-header">
-       <img src="img/logo3.png" alt="logo" class="page-header__item">
+       <img src="img/logo4.png" alt="logo" class="page-header__item">
        <nav class="main-navigation page-header__item">
           <ul role="menubar" class="navigation-list">
              <li role="presentation">
@@ -47,7 +47,7 @@
         <table class="experience-table">
           <thead>
             <tr>
-              <th>Skills</td>
+              <th>Skills</th>
               <th>Years of Experience</th>
               <th>Level of Expertise</th>
             </tr>
