--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
     <section class="contact">
       <h1>Contact Information</h1>
-          Telephone:<a href= tel:12269293570">1-226-929-3570</a> <br>
+          Telephone:<a href= tel:12269293570>1-226-929-3570</a> <br>
           Skype:<a href="skype:mfragiskatos"> mfragiskatos</a> <br>
           Email:<a href="mailto:michael.fragiskatos@gmail.com">michael.fragiskatos@gmail.com</a><br>
           <br>
