--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
   <body>
     <header class="page-header">
-       <img src="img/logo4.png" alt="logo" class="page-header__item">
+       <img src="img/logo3.png" alt="logo" class="page-header__item">
        <nav class="main-navigation page-header__item">
           <ul role="menubar" class="navigation-list">
              <li role="presentation">
@@ -34,11 +34,7 @@
 
     <section class="contact">
       <h1>Contact Information</h1>
-<<<<<<< Updated upstream
-          Telephone:<a href= "tel:12269293570">1-226-929-3570</a> <br>
-=======
           Telephone:<a href= tel:12269293570>1-226-929-3570</a> <br>
->>>>>>> Stashed changes
           Skype:<a href="skype:mfragiskatos"> mfragiskatos</a> <br>
           Email:<a href="mailto:michael.fragiskatos@gmail.com">michael.fragiskatos@gmail.com</a><br>
           <br>
@@ -50,7 +46,7 @@
           <label class="standard-label" for="contact-email">Email: </label>
           <input type="email" id="contact-email" required>
           <label class="standard-label" for="contact-tel">Telephone: </label>
-          <input type="tel" required id="contact-tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
+          <input type="tel" id="contact-tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
           <label class="standard-label" for="contact-message">Message: </label>
           <textarea required maxlength="240" id="contact-message"></textarea>
           <br>
