--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
           <a href="mailto:michael.fragiskatos@gmail.com">Contact Me!</a>
     </section>
         <br>
-      <div class: "contact-container">
-        <form action="" method="post" class="contact-form">
+      <div class= "contact-container">
+        <form method="post" class="contact-form">
           <label class="standard-label" for="contact-email">Email: </label>
           <input type="email" id="contact-email" required>
           <label class="standard-label" for="contact-tel">Telephone: </label>
