--- a/work.html
+++ b/work.html
@@ -90,6 +90,8 @@
           <a href="https://github.com/mfraggy25/LanguageQuizzes"
             >GitHub Project</a
           >
+          <br />
+          <a href="https://mfraggy25.github.io/LanguageQuizzes/">Hosted Site</a>
         </div>
         <div class="grid__item">
           <h2>Checklist App</h2>
@@ -100,6 +102,8 @@
             completed.
           </p>
           <a href="https://github.com/mfraggy25/Checklist">GitHub Project</a>
+          <br />
+          <a href="https://mfraggy25.github.io/checklist/">Hosted Site</a>
         </div>
         <div class="grid__item">
           <h2>Mobile web app</h2>
