--- a/work.html
+++ b/work.html
@@ -103,7 +103,7 @@
           </p>
           <a href="https://github.com/mfraggy25/Checklist">GitHub Project</a>
           <br />
-          <a href="https://mfraggy25.github.io/checklist/">Hosted Site</a>
+          <a href="https://checklistmichaelf.herokuapp.com/">Hosted Site</a>
         </div>
         <div class="grid__item">
           <h2>Mobile web app</h2>
