change pic size

--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
         </div>
         <div class="grid__item">
           <h2>Language Quiz App</h2>
-          <img src="img/Quiz.PNG" />
+          <img src="img/Quiz.PNG" width="275" height="275" />
           <p>
             Created a quiz app to learn different languages using Angular
             framework and TypeScript. This allows a user to select a quiz with
