Add social media links and correct resume

--- a/about.html
+++ b/about.html
@@ -2,77 +2,104 @@
 <html>
 
   <head>
-      <meta charset="utf-8">
-      <title>About Me</title>
-      <link rel="shortcut icon" href= "img/favicon-32x32.png" />
-      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-      <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="css/style.production.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>About Me</title>
+    <link rel="shortcut icon" href="img/favicon-32x32.png" />
+    <link rel="stylesheet" type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
     <header class="page-header">
-       <img src="img/logo3.png" alt="logo" class="page-header__item">
-       <nav class="main-navigation page-header__item">
-          <ul role="menubar" class="navigation-list">
-             <li role="presentation">
-                <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-             </li>
-             <li role="presentation">
-                <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
-             </li>
-             <li role="presentation">
-                <a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Work</a>
-             </li>
-             <li role="presentation">
-                <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-             </li>
-          </ul>
-       </nav>
+      <img src="img/logo3.png" alt="logo" class="page-header__item">
+      <nav class="main-navigation page-header__item">
+        <ul role="menubar" class="navigation-list">
+          <li role="presentation">
+            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
+          </li>
+          <li role="presentation">
+            <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
+          </li>
+          <li role="presentation">
+            <a href="work.html" role="menuitem" class="navigation-list__item
+              navigation-list__item--active">Work</a>
+          </li>
+          <li role="presentation">
+            <a href="contact.html" role="menuitem"
+              class="navigation-list__item">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <section class="profile">
       <h1> About Me </h1>
-        <p> My name is Michael Fragiskatos and I live in Kitchener, Ontario.  I have recently begun embarking on a major career
-            change in my life by jumping into web development.  I dabbled in some coding and it made me realize this is what I want
-            to pursue.  I am currently enrolled in the Web Development program through Career Foundry.
-            <br>
-            <br>
-            Some of my hobbies include travelling, working out, hot yoga, playing guitar, going to concerts, and binge watching TV series.
-        </P>
-        <a href="files/resume.pdf" class="button" download>Download my CV</a>
+      <p> My name is Michael Fragiskatos and I live in Kitchener, Ontario. I
+        have recently begun embarking on a major career
+        change in my life by jumping into web development. I dabbled in some
+        coding and it made me realize this is what I want
+        to pursue. I am currently enrolled in the Web Development program
+        through Career Foundry.
         <br>
+        <br>
+        Some of my hobbies include travelling, working out, hot yoga, playing
+        guitar, going to concerts, and binge watching TV series.
+      </P>
+      <a href="files/Resume_Michael Fragiskatos.pdf.pdf" class="button"
+        download>Download my CV</a>
+      <br>
 
-        <table class="experience-table">
-          <thead>
-            <tr>
-              <th>Skills</th>
-              <th>Years of Experience</th>
-              <th>Level of Expertise</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>HTML</td>
-              <td>1</td>
-              <td>Beginner</td>
-            </tr>
-            <tr>
-              <td>CSS</td>
-              <td>1</td>
-              <td>Beginner</td>
-            </tr>
-            <tr>
-              <td>JavaScript</td>
-              <td>1</td>
-              <td>Beginner</td>
-            </tr>
-          </tbody>
-        </table>
+      <table class="experience-table">
+        <thead>
+          <tr>
+            <th>Skills</th>
+            <th>Years of Experience</th>
+            <th>Level of Expertise</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>HTML</td>
+            <td>1</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+            <td>1</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>JavaScript</td>
+            <td>1</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>Node.js</td>
+            <td>1</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>React</td>
+            <td>1</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>Angular</td>
+            <td>1</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>Vue.js</td>
+            <td>1</td>
+            <td>Beginner</td>
+          </tr>
+        </tbody>
+      </table>
 
-        <img src="img/NYC.svg">
-
-      </section>
-    </body>
-  </html>
+    </section>
+  </body>
+</html>
