--- a/index.html
+++ b/index.html
@@ -42,31 +42,20 @@
       <h1>Hello!</h1>
       <p>My name is Michael Fragiskatos. I am a <span>web</span> developer from
         Canada.</p>
-      <a href="#" class="button">Check out some of my code</a>
+      <a href="https://github.com/mfraggy25" class="button">Check out some of my
+        code</a>
     </section>
 
     <footer class="page-footer">
       <h2>Find me on:</h2>
       <div class="social-media">
-        <a href="#">
+        <a href="https://github.com/mfraggy25">
           <img src="img/iconfinder_github_circle_black_107161.svg" alt="Github"
             class="social__logo">
         </a>
-        <a href="#">
-          <img src="img/iconfinder_twitter_circle_color_107170.svg"
-            alt="Twitter" class="social__logo">
-        </a>
-        <a href="#">
+        <a href="https://www.linkedin.com/in/michaelfragiskatos/">
           <img src="img/iconfinder_linkedin_circle_color_107178.svg"
             alt="LinkedIn" class="social__logo">
-        </a>
-        <a href="#">
-          <img src="img/iconfinder_facebook_circle_color_107175.svg"
-            alt="Facebook" class="social__logo">
-        </a>
-        <a href="#">
-          <img src="img/iconfinder_instagram_circle_color_107172.svg"
-            alt="Instagram" class="social__logo">
         </a>
       </div>
     </footer>
