--- a/contact.html
+++ b/contact.html
@@ -2,80 +2,77 @@
 <html>
 
   <head>
-      <meta charset="utf-8">
-      <title>Contact Me!</title>
-      <link rel="shortcut icon" href= "img/favicon-32x32.png" />
-      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-      <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="css/style.production.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>Contact Me!</title>
+    <link rel="shortcut icon" href="img/favicon-32x32.png" />
+    <link rel="stylesheet" type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
     <header class="page-header">
-       <img src="img/logo3.png" alt="logo" class="page-header__item">
-       <nav class="main-navigation page-header__item">
-          <ul role="menubar" class="navigation-list">
-             <li role="presentation">
-                <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-             </li>
-             <li role="presentation">
-                <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
-             </li>
-             <li role="presentation">
-                <a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Work</a>
-             </li>
-             <li role="presentation">
-                <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-             </li>
-          </ul>
-       </nav>
+      <img src="img/logo3.png" alt="logo" class="page-header__item">
+      <nav class="main-navigation page-header__item">
+        <ul role="menubar" class="navigation-list">
+          <li role="presentation">
+            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
+          </li>
+          <li role="presentation">
+            <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
+          </li>
+          <li role="presentation">
+            <a href="work.html" role="menuitem" class="navigation-list__item
+              navigation-list__item--active">Work</a>
+          </li>
+          <li role="presentation">
+            <a href="contact.html" role="menuitem"
+              class="navigation-list__item">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <section class="contact">
       <h1>Contact Information</h1>
-          Telephone:<a href= tel:12269293570>1-226-929-3570</a> <br>
-          Skype:<a href="skype:mfragiskatos"> mfragiskatos</a> <br>
-          Email:<a href="mailto:michael.fragiskatos@gmail.com">michael.fragiskatos@gmail.com</a><br>
-          <br>
-          <a href="mailto:michael.fragiskatos@gmail.com">Contact Me!</a>
+      Telephone:<a href= tel:12269293570>1-226-929-3570</a> <br>
+      Skype:<a href="skype:mfragiskatos"> mfragiskatos</a> <br>
+      Email:<a href="mailto:michael.fragiskatos@gmail.com">michael.fragiskatos@gmail.com</a><br>
+      <br>
+      <a href="mailto:michael.fragiskatos@gmail.com">Contact Me!</a>
     </section>
+    <br>
+    <div class="contact-container">
+      <form method="post" class="contact-form">
+        <label class="standard-label" for="contact-email">Email: </label>
+        <input type="email" id="contact-email" required>
+        <label class="standard-label" for="contact-tel">Telephone: </label>
+        <input type="tel" id="contact-tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
+        <label class="standard-label" for="contact-message">Message: </label>
+        <textarea required maxlength="240" id="contact-message"></textarea>
         <br>
-      <div class= "contact-container">
-        <form method="post" class="contact-form">
-          <label class="standard-label" for="contact-email">Email: </label>
-          <input type="email" id="contact-email" required>
-          <label class="standard-label" for="contact-tel">Telephone: </label>
-          <input type="tel" id="contact-tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
-          <label class="standard-label" for="contact-message">Message: </label>
-          <textarea required maxlength="240" id="contact-message"></textarea>
-          <br>
-          <input type="submit" value="Send message">
-        </form>
+        <input type="submit" value="Send message">
+      </form>
+    </div>
+
+    <footer class="page-footer">
+      <h2>Find me on:</h2>
+      <div class="social-media">
+        <a href="https://github.com/mfraggy25">
+          <img src="img/iconfinder_github_circle_black_107161.svg" alt="Github"
+            class="social__logo">
+        </a>
+        <a href="https://www.linkedin.com/in/michaelfragiskatos/">
+          <img src="img/iconfinder_linkedin_circle_color_107178.svg"
+            alt="LinkedIn" class="social__logo">
+        </a>
       </div>
+    </footer>
 
-        <footer class="page-footer">
-          <h2>Find me on:</h2>
-           <div class="social-media">
-            <a href="#">
-              <img src="img/iconfinder_github_circle_black_107161.svg" alt="Github" class="social__logo">
-            </a>
-            <a href="#">
-              <img src="img/iconfinder_twitter_circle_color_107170.svg" alt="Twitter" class="social__logo">
-            </a>
-            <a href="#">
-              <img src="img/iconfinder_linkedin_circle_color_107178.svg" alt="LinkedIn" class="social__logo">
-            </a>
-            <a href="#">
-              <img src="img/iconfinder_facebook_circle_color_107175.svg" alt="Facebook" class="social__logo">
-            </a>
-            <a href="#">
-              <img src="img/iconfinder_instagram_circle_color_107172.svg" alt="Instagram" class="social__logo">
-            </a>
-          </div>
-        </footer>
-
-        <script src="js/tota11y.min.js"></script>
+    <script src="js/tota11y.min.js"></script>
   </body>
 
 </html>
