--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
     <link
       href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
       rel="stylesheet"
-    />
+      />
     <link rel="stylesheet" type="text/css" href="css/style.production.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -18,28 +18,20 @@
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
-            <a href="index.html" role="menuitem" class="navigation-list__item"
-              >Home</a
-            >
+            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
           </li>
           <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item"
-              >About</a
-            >
+            <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
           </li>
           <li role="presentation">
             <a
               href="work.html"
               role="menuitem"
               class="navigation-list__item
-                     navigation-list__item--active"
-              >Work</a
-            >
+              navigation-list__item--active">Work</a>
           </li>
           <li role="presentation">
-            <a href="contact.html" role="menuitem" class="navigation-list__item"
-              >Contact</a
-            >
+            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
           </li>
         </ul>
       </nav>
@@ -75,9 +67,7 @@
           </p>
           <a href="https://github.com/mfraggy25/my-movies">GitHub Project</a>
           <br />
-          <a href="https://movieswithmichaelf.herokuapp.com/client"
-            >Hosted Site</a
-          >
+          <a href="https://movieswithmichaelf.herokuapp.com/client">Hosted Site</a>
         </div>
         <div class="grid__item">
           <h2>Language Quiz App</h2>
@@ -87,9 +77,7 @@
             framework and TypeScript. This allows a user to select a quiz with
             multiple choice questions and can view their results once completed.
           </p>
-          <a href="https://github.com/mfraggy25/LanguageQuizzes"
-            >GitHub Project</a
-          >
+          <a href="https://github.com/mfraggy25/LanguageQuizzes">GitHub Project</a>
           <br />
           <a href="https://mfraggy25.github.io/LanguageQuizzes/">Hosted Site</a>
         </div>
@@ -129,40 +117,13 @@
     <footer class="page-footer">
       <h2>Find me on:</h2>
       <div class="social-media">
-        <a href="#">
-          <img
-            src="img/iconfinder_github_circle_black_107161.svg"
-            alt="Github"
-            class="social__logo"
-          />
+        <a href="https://github.com/mfraggy25">
+          <img src="img/iconfinder_github_circle_black_107161.svg" alt="Github"
+            class="social__logo">
         </a>
-        <a href="#">
-          <img
-            src="img/iconfinder_twitter_circle_color_107170.svg"
-            alt="Twitter"
-            class="social__logo"
-          />
-        </a>
-        <a href="#">
-          <img
-            src="img/iconfinder_linkedin_circle_color_107178.svg"
-            alt="LinkedIn"
-            class="social__logo"
-          />
-        </a>
-        <a href="#">
-          <img
-            src="img/iconfinder_facebook_circle_color_107175.svg"
-            alt="Facebook"
-            class="social__logo"
-          />
-        </a>
-        <a href="#">
-          <img
-            src="img/iconfinder_instagram_circle_color_107172.svg"
-            alt="Instagram"
-            class="social__logo"
-          />
+        <a href="https://www.linkedin.com/in/michaelfragiskatos/">
+          <img src="img/iconfinder_linkedin_circle_color_107178.svg"
+            alt="LinkedIn" class="social__logo">
         </a>
       </div>
     </footer>
