Add case study page

--- a/casestudy.html
+++ b/casestudy.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Michael Fragiskatos - Portfolio</title>
+    <title>About Me</title>
     <link rel="stylesheet" type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
@@ -39,33 +39,3 @@
         </ul>
       </nav>
     </header>
-
-    <section class="profile">
-      <img src="img/michael_f.jpg" alt="Michael Fragiskatos Portrait"
-        class="profile__portrait">
-      <h1>Hello!</h1>
-      <p>My name is Michael Fragiskatos. I am a <span>web</span> developer from
-        Canada.</p>
-      <a href="https://github.com/mfraggy25" class="button">Check out some of my
-        code</a>
-    </section>
-
-    <footer class="page-footer">
-      <h2>Find me on:</h2>
-      <div class="social-media">
-        <a href="https://github.com/mfraggy25">
-          <img src="img/iconfinder_github_circle_black_107161.svg" alt="Github"
-            class="social__logo">
-        </a>
-        <a href="https://www.linkedin.com/in/michaelfragiskatos/">
-          <img src="img/iconfinder_linkedin_circle_color_107178.svg"
-            alt="LinkedIn" class="social__logo">
-        </a>
-      </div>
-    </footer>
-
-    <script src="js/tota11y.min.js"></script>
-    <br>
-  </body>
-
-</html>
