--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
-    <link rel="shortcut icon" href="img/favicon-32x32.png" />
     <link rel="stylesheet" type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
@@ -27,6 +26,11 @@
           <li role="presentation">
             <a href="work.html" role="menuitem" class="navigation-list__item
               navigation-list__item--active">Work</a>
+          </li>
+          <li role="presentation">
+            <a href="casestudy.html" role="menuitem"
+              class="navigation-list__item
+              navigation-list__item--active">Case Study</a>
           </li>
           <li role="presentation">
             <a href="contact.html" role="menuitem"
