--- a/work.html
+++ b/work.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <title>Michael Fragiskatos - Portfolio Website</title>
-    <link rel="shortcut icon" href="img/favicon-32x32.png" />
     <link
       href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
       rel="stylesheet"
@@ -31,7 +30,13 @@
               navigation-list__item--active">Work</a>
           </li>
           <li role="presentation">
-            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+            <a href="casestudy.html" role="menuitem"
+              class="navigation-list__item
+              navigation-list__item--active">Case Study</a>
+          </li>
+          <li role="presentation">
+            <a href="contact.html" role="menuitem"
+              class="navigation-list__item">Contact</a>
           </li>
         </ul>
       </nav>
