Complete case study

--- a/casestudy.html
+++ b/casestudy.html
@@ -1,41 +1,154 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <title>About Me</title>
-    <link rel="stylesheet" type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <title>Case Study</title>
+        <link rel="stylesheet" type="text/css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+        <link
+            href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/style.production.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
 
-  <body>
-    <header class="page-header">
-      <img src="img/logo3.png" alt="logo" class="page-header__item">
-      <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="navigation-list">
-          <li role="presentation">
-            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-          </li>
-          <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
-          </li>
-          <li role="presentation">
-            <a href="work.html" role="menuitem" class="navigation-list__item
-              navigation-list__item--active">Work</a>
-          </li>
-          <li role="presentation">
-            <a href="casestudy.html" role="menuitem"
-              class="navigation-list__item
-              navigation-list__item--active">Case Study</a>
-          </li>
-          <li role="presentation">
-            <a href="contact.html" role="menuitem"
-              class="navigation-list__item">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <body>
+        <header class="page-header">
+            <img src="img/logo3.png" alt="logo" class="page-header__item">
+            <nav class="main-navigation page-header__item">
+                <ul role="menubar" class="navigation-list">
+                    <li role="presentation">
+                        <a href="index.html" role="menuitem"
+                            class="navigation-list__item">Home</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="about.html" role="menuitem"
+                            class="navigation-list__item">About</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="work.html" role="menuitem"
+                            class="navigation-list__item
+                            navigation-list__item--active">Work</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="casestudy.html" role="menuitem"
+                            class="navigation-list__item
+                            navigation-list__item--active">Case Study</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="contact.html" role="menuitem"
+                            class="navigation-list__item">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <section class="profile">
+            <h1> Case Study - My Movies App </h1>
+            <p> Using the Javascript development of the MERN (MongoDB, Express,
+                React, Node.js) stack, I created an application allows users to
+                view information about different movies including the details on
+                the genre and director. They are also able to update their own
+                personal information and can create their own list of favourite
+                movies from the selection given. The goal by the end was to
+                ensure the following features of the app were implemented
+                successfully:
+            </P>
+        </section>
+        <section class="contact">
+            <div class="grid">
+                <div class="grid__item">
+                    <h2>Allow new users to register and log in</h2>
+                    <img src="img/Screenshot 1.PNG" width="400" height="250"/>
+                </div>
+                <div class="grid__item">
+                    <h2>Return a list of movies to all users</h2>
+                    <img src="img/Screenshot 2.PNG" width="325" height="375"/>
+                </div>
+                <div class="grid__item">
+                    <h2>Return data (description, genre, director, image URL) about a single movie by title to the user </h2>
+                    <img src="img/Screenshot 3.PNG"/>
+                </div>
+                <div class="grid__item">
+                    <h2>Return data about a genre (description) by name/title </h2>
+                    <img src="img/Screenshot 4.PNG" width="250" height="425"/>
+                </div>
+                <div class="grid__item">
+                    <h2>Allow users to add and delete movies from their list of favourites </h2>
+                    <img src="img/Screenshot 5.PNG" width="300" height="400"/>
+                </div>
+                <div class="grid__item">
+                    <h2>Return data about a director (bio, birth year, death year) by name  </h2>
+                    <img src="img/Screenshot 6.PNG" width="350" height="275"/>
+                </div>
+                <div class="grid__item2">
+                    <h2>Allow users to update their user info or delete their account </h2>
+                    <img src="img/Screenshot 7.PNG"/>
+                </div>
+            </div>
+        </section>
+        <br>
+        <br>
+        <section class="profile">
+            <h1>WHAT WENT WELL:</h1>
+            <p> My strengths in this project occurred with building the foundation of the app.  I was successful in storing and retrieving data and creating separate components and pages to ensure individual focus on each function including user registration and log in, movie and profile viewing, and updating profiles.  Presentation and documentation of coding is important when having to navigate in between scripts and finding bugs.</p>
+                <h3>Skills</h3>
+                    <ul style="list-style-type:square;">
+                    <li>Organized all coding to make it easily readable, with notes provided to track the functions of each code</li>
+                    <li>Consistency in collecting movie database and updating where necessary</li>
+                </ul>
+                <h3>Processes</h3> 
+                    <ul style="list-style-type:square;">
+                    <li>Created a REST API using the MERN (MongoDB, Express, React, Node.js</li>
+                    <li>Using CRUD (Create, Read, Update, Delete) to retrieve data from my database and store that data in a non-relational way</li>
+                </ul>
+                <h3>Solutions</h3>
+                    <ul style="list-style-type:square;">
+                    <li>Remain consistent with each technique</li>
+                </ul>
+            <h1>WHAT DIDN'T GO WELL:</h1>
+            <p> The greatest challenge in this project came down to testing the business logic layer of the app – ensuring that it could recognize a registered user and allow the user to log in and make updates.  My statements and queries were not being read and as a result, the data appeared null. This obstacle reappeared when it came to client-side app routing.  Some of my functions were not properly defined, making it difficult to call data between the components, API, and the front end.</p> 
+                <h3>Skills</h3>
+                    <ul style="list-style-type:square;">
+                    <li>Translating between Node.js application and MongoDB database using Mongoose</li>
+                    <li>State-based routing</li>
+                </ul>
+                <h3>Processes</h3> 
+                    <ul style="list-style-type:square;">
+                    <li>Implementing authentication and authorization</li>
+                </ul>
+                <h3>Solutions</h3>
+                    <ul style="list-style-type:square;">
+                    <li>Review reading sources from exercise</li>
+                    <li>Reach out to tutor, mentor, and study buddies for assistance</li>
+                </ul>
+            <h1>WHAT CAN BE IMPROVED:</h1>
+            <p> I need to ensure that all my data, functions, endpoints, and routes consistently align between the front, middle, and back end of the app.  Even the smallest of errors such as inconsistent capitalization on a property can prevent the app from being displayed properly.  Having a consistent workflow and visual strategic map will help me resolve bugs more efficiently.</p> 
+                <h3>Skills</h3>
+                    <ul style="list-style-type:square;">
+                    <li>Defining API endpoints and ensuring they match on both the front and back end</li>
+                </ul>
+                <h3>Processes</h3> 
+                    <ul style="list-style-type:square;">
+                    <li>Utilize the workflow of creating a component, making an API, calling the display data, and repeat</li>
+                </ul>
+                <h3>Skills Gap</h3>
+                    <ul style="list-style-type:square;">
+                    <li>Project and time management – need to outline what areas of the project need to be prioritized and finding the most efficient building sequence</li>
+                </ul>
+                <h3>Solutions</h3>
+                    <ul style="list-style-type:square;">
+                    <li>Create new, similar database apps but different subjects (i.e. music, travel) to get more comfortable with both server-side and client-side app building</li>
+                </ul>
+            <h1>CAREER CHANGE STRATEGY:</h1>
+                <ul style="list-style-type:square;">
+                    <li>Revisit the app frequently in order to make enhancements to maintain and improve my skills in full stack Javascript development</li>
+                    <li>Build new API databases for future, similar projects in order to get comfortable with the MERN process </li>
+                    <li>Continue education of full stack web development through online readings and tutorials</li>
+                    <li>Network and collaborate with developers at a similar level to work jointly on projects for practice and to support one another in growing our skills in programming</li>    
+                </ul>
+            </p>
+        </section>
+        </body>
+        </html>
