--- a/index.html
+++ b/index.html
@@ -1,71 +1,99 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Michael Fragiskatos - Portfolio</title>
-    <link rel="stylesheet" type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="css/style.production.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
   <body>
     <header class="page-header">
-      <img src="img/logo3.png" alt="logo" class="page-header__item">
+      <img src="img/logo3.png" alt="logo" class="page-header__item" />
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
-            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
+            <a href="index.html" role="menuitem" class="navigation-list__item"
+              >Home</a
+            >
           </li>
           <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
+            <a href="about.html" role="menuitem" class="navigation-list__item"
+              >About</a
+            >
           </li>
           <li role="presentation">
-            <a href="work.html" role="menuitem" class="navigation-list__item
-              navigation-list__item--active">Work</a>
+            <a
+              href="work.html"
+              role="menuitem"
+              class="navigation-list__item navigation-list__item--active"
+              >Work</a
+            >
           </li>
           <li role="presentation">
-            <a href="casestudy.html" role="menuitem"
-              class="navigation-list__item
-              navigation-list__item--active">Case Study</a>
+            <a
+              href="casestudy.html"
+              role="menuitem"
+              class="navigation-list__item navigation-list__item--active"
+              >Case Study</a
+            >
           </li>
           <li role="presentation">
-            <a href="contact.html" role="menuitem"
-              class="navigation-list__item">Contact</a>
+            <a href="contact.html" role="menuitem" class="navigation-list__item"
+              >Contact</a
+            >
           </li>
         </ul>
       </nav>
     </header>
 
     <section class="profile">
-      <img src="img/michael_f.jpg" alt="Michael Fragiskatos Portrait"
-        class="profile__portrait">
-      <h1>Hello!</h1>
-      <p>My name is Michael Fragiskatos. I am a <span>web</span> developer from
-        Canada.</p>
-      <a href="https://github.com/mfraggy25" class="button">Check out some of my
-        code</a>
+      <img
+        src="img/michael_f.jpg"
+        alt="Michael Fragiskatos Portrait"
+        class="profile__portrait"
+      />
+      <h1>Online Portfolio</h1>
+      <p>
+        My name is Michael Fragiskatos and I have recently entered the
+        challenging yet rewarding world of web development! Feel free to learn
+        more about my background and projects completed.
+      </p>
+      <a href="https://github.com/mfraggy25" class="button"
+        >Check out some of my code</a
+      >
     </section>
 
     <footer class="page-footer">
       <h2>Find me on:</h2>
       <div class="social-media">
         <a href="https://github.com/mfraggy25">
-          <img src="img/iconfinder_github_circle_black_107161.svg" alt="Github"
-            class="social__logo">
+          <img
+            src="img/iconfinder_github_circle_black_107161.svg"
+            alt="Github"
+            class="social__logo"
+          />
         </a>
         <a href="https://www.linkedin.com/in/michaelfragiskatos/">
-          <img src="img/iconfinder_linkedin_circle_color_107178.svg"
-            alt="LinkedIn" class="social__logo">
+          <img
+            src="img/iconfinder_linkedin_circle_color_107178.svg"
+            alt="LinkedIn"
+            class="social__logo"
+          />
         </a>
       </div>
     </footer>
 
     <script src="js/tota11y.min.js"></script>
-    <br>
+    <br />
   </body>
-
 </html>
