Update colour, resume

--- a/casestudy.html
+++ b/casestudy.html
@@ -46,10 +46,11 @@
 
         <section class="profile">
             <h1> Case Study - My Movies App </h1>
-            <p> Using the Javascript development of the MERN (MongoDB, Express,
+            <p style="text-indent: 40px"> Using the Javascript development of the MERN (MongoDB, Express,
                 React, Node.js) stack, I created an application allows users to
                 view information about different movies including the details on
-                the genre and director. They are also able to update their own
+                the genre and director.</p> 
+            <p style="text-indent: 40px"> They are also able to update their own
                 personal information and can create their own list of favourite
                 movies from the selection given. The goal by the end was to
                 ensure the following features of the app were implemented
