Add Meet N Greet project to work

--- a/work.html
+++ b/work.html
@@ -76,7 +76,7 @@
         </div>
         <div class="grid__item">
           <h2>Language Quiz App</h2>
-          <img src="img/Quiz.PNG" width="275" height="275" />
+          <img src="img/Quiz.PNG" width="250" height="275" />
           <p>
             Created a quiz app to learn different languages using Angular
             framework and TypeScript. This allows a user to select a quiz with
@@ -99,13 +99,16 @@
           <a href="https://checklistmichaelf.herokuapp.com/">Hosted Site</a>
         </div>
         <div class="grid__item">
-          <h2>Mobile web app</h2>
+          <h2>Meet N Greet </h2>
+          <img src="img/MeetNGreet.PNG" width="325" height="300" />
           <p>
-            Within this project, I was responsible for the frontend. It’s
-            written in React.js. Additionally, I've created the HTML and CSS
-            templates.
+            Built a serverless, progressive web application (PWA) with React
+            using a test-driven development (TDD) technique. The app uses the
+            Meetup API to fetch upcoming events for a selected city.
           </p>
-          <a href="#">See project on GitHub</a>
+          <a href="https://github.com/mfraggy25/MeetNGreet">GitHub Project</a>
+          <br />
+          <a href="https://mfraggy25.github.io/MeetNGreet">Hosted Site</a>
         </div>
         <div class="grid__item">
           <h2>Mobile web app</h2>
@@ -116,6 +119,7 @@
           </p>
           <a href="#">See project on GitHub</a>
         </div>
+
       </div>
     </section>
 
