--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
     <link
       href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
       rel="stylesheet"
-      />
+    />
     <link rel="stylesheet" type="text/css" href="css/style.production.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -17,26 +17,35 @@
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
-            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
+            <a href="index.html" role="menuitem" class="navigation-list__item"
+              >Home</a
+            >
           </li>
           <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
+            <a href="about.html" role="menuitem" class="navigation-list__item"
+              >About</a
+            >
           </li>
           <li role="presentation">
             <a
               href="work.html"
               role="menuitem"
-              class="navigation-list__item
-              navigation-list__item--active">Work</a>
+              class="navigation-list__item navigation-list__item--active"
+              >Work</a
+            >
           </li>
           <li role="presentation">
-            <a href="casestudy.html" role="menuitem"
-              class="navigation-list__item
-              navigation-list__item--active">Case Study</a>
+            <a
+              href="casestudy.html"
+              role="menuitem"
+              class="navigation-list__item navigation-list__item--active"
+              >Case Study</a
+            >
           </li>
           <li role="presentation">
-            <a href="contact.html" role="menuitem"
-              class="navigation-list__item">Contact</a>
+            <a href="contact.html" role="menuitem" class="navigation-list__item"
+              >Contact</a
+            >
           </li>
         </ul>
       </nav>
@@ -72,7 +81,9 @@
           </p>
           <a href="https://github.com/mfraggy25/my-movies">GitHub Project</a>
           <br />
-          <a href="https://movieswithmichaelf.herokuapp.com/client">Hosted Site</a>
+          <a href="https://movieswithmichaelf.herokuapp.com/client"
+            >Hosted Site</a
+          >
         </div>
         <div class="grid__item">
           <h2>Language Quiz App</h2>
@@ -82,7 +93,9 @@
             framework and TypeScript. This allows a user to select a quiz with
             multiple choice questions and can view their results once completed.
           </p>
-          <a href="https://github.com/mfraggy25/LanguageQuizzes">GitHub Project</a>
+          <a href="https://github.com/mfraggy25/LanguageQuizzes"
+            >GitHub Project</a
+          >
           <br />
           <a href="https://mfraggy25.github.io/LanguageQuizzes/">Hosted Site</a>
         </div>
@@ -99,7 +112,7 @@
           <a href="https://checklistmichaelf.herokuapp.com/">Hosted Site</a>
         </div>
         <div class="grid__item">
-          <h2>Meet N Greet </h2>
+          <h2>Meet N Greet</h2>
           <img src="img/MeetNGreet.PNG" width="325" height="300" />
           <p>
             Built a serverless, progressive web application (PWA) with React
@@ -119,7 +132,6 @@
           </p>
           <a href="#">See project on GitHub</a>
         </div>
-
       </div>
     </section>
 
@@ -127,12 +139,18 @@
       <h2>Find me on:</h2>
       <div class="social-media">
         <a href="https://github.com/mfraggy25">
-          <img src="img/iconfinder_github_circle_black_107161.svg" alt="Github"
-            class="social__logo">
+          <img
+            src="img/iconfinder_github_circle_black_107161.svg"
+            alt="Github"
+            class="social__logo"
+          />
         </a>
         <a href="https://www.linkedin.com/in/michaelfragiskatos/">
-          <img src="img/iconfinder_linkedin_circle_color_107178.svg"
-            alt="LinkedIn" class="social__logo">
+          <img
+            src="img/iconfinder_linkedin_circle_color_107178.svg"
+            alt="LinkedIn"
+            class="social__logo"
+          />
         </a>
       </div>
     </footer>
