fix broken image

--- a/work.html
+++ b/work.html
@@ -113,7 +113,7 @@
         </div>
         <div class="grid__item">
           <h2>Meet N Greet</h2>
-          <img src="img/MeetNGreet.PNG" width="325" height="300" />
+          <img src="img/Meet_Greet.png" width="325" height="300" />
           <p>
             Built a serverless, progressive web application (PWA) with React
             using a test-driven development (TDD) technique. The app uses the
